objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Current_PM_System__c</fullName>
        <label>Current PM System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AdvancedMD/ADP</fullName>
                </value>
                <value>
                    <fullName>AllScripts MyWay</fullName>
                </value>
                <value>
                    <fullName>AllScripts Pro</fullName>
                </value>
                <value>
                    <fullName>Amazing Charts</fullName>
                </value>
                <value>
                    <fullName>Aprima</fullName>
                </value>
                <value>
                    <fullName>AthenaHealth</fullName>
                </value>
                <value>
                    <fullName>Avisena</fullName>
                </value>
                <value>
                    <fullName>Azalea Health</fullName>
                </value>
                <value>
                    <fullName>Care360</fullName>
                </value>
                <value>
                    <fullName>CareCloud</fullName>
                </value>
                <value>
                    <fullName>Cerner Ambulatory</fullName>
                </value>
                <value>
                    <fullName>Chart Logic</fullName>
                </value>
                <value>
                    <fullName>Compugroup Medical (CPG)/Alteer</fullName>
                </value>
                <value>
                    <fullName>CureMD</fullName>
                </value>
                <value>
                    <fullName>Dr. Cloud</fullName>
                </value>
                <value>
                    <fullName>eClinicalWorks</fullName>
                </value>
                <value>
                    <fullName>E-MD</fullName>
                </value>
                <value>
                    <fullName>GE Centricity</fullName>
                </value>
                <value>
                    <fullName>Greenway</fullName>
                </value>
                <value>
                    <fullName>Kareo</fullName>
                </value>
                <value>
                    <fullName>Lytec</fullName>
                </value>
                <value>
                    <fullName>MacPractice</fullName>
                </value>
                <value>
                    <fullName>McKesson Lytec</fullName>
                </value>
                <value>
                    <fullName>Medical Manager</fullName>
                </value>
                <value>
                    <fullName>Medios</fullName>
                </value>
                <value>
                    <fullName>MediTab</fullName>
                </value>
                <value>
                    <fullName>Meditech</fullName>
                </value>
                <value>
                    <fullName>MediTouch</fullName>
                </value>
                <value>
                    <fullName>MedStar</fullName>
                </value>
                <value>
                    <fullName>Modernizing Medicine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DHC_Email__c</fullName>
        <label>DHC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DHC_First_Name__c</fullName>
        <label>DHC First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Last_Name__c</fullName>
        <label>DHC Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Phone__c</fullName>
        <label>DHC Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DHC_Sync_Time__c</fullName>
        <description>Added, per support, since not included in the package</description>
        <label>DHC Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DHC_Title__c</fullName>
        <label>DHC Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateBookRequested__c</fullName>
        <label>DateBookRequested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Validated__c</fullName>
        <label>Date Last Validated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_2__c</fullName>
        <label>Degree - Graduate</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <inlineHelpText>Use standard acronyms such as BS, MBA, etc</inlineHelpText>
        <label>Degree</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Hourly_rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Desired Hourly rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>Trim(Mid(Email,find("@",Email,1)+1,50))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Physical_Location_City__c</fullName>
        <formula>Account.EMS_Physical_Location_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Physical Location City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Physical_Location_State__c</fullName>
        <formula>Account.EMS_Physical_Location_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Physical Location State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Physical_Location_Street__c</fullName>
        <formula>Account.EMS_Physical_Location_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Physical Location Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Physical_Location_Zip_Code__c</fullName>
        <formula>Account.EMS_Physical_Location_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Physical Location Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Pay_Type__c</fullName>
        <label>Employee Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salary</fullName>
                    <default>true</default>
                    <label>Salary</label>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eng_Change_Date__c</fullName>
        <label>Eng Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eng_Change__c</fullName>
        <label>Eng Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eng_Movement__c</fullName>
        <formula>IMAGE(If(and(Today() - Eng_Change_Date__c &lt;=30, Eng_Change__c&lt;&gt;0),
If(Eng_Change__c &gt; 0, "/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682M00000RI4sw&amp;operationContext=CHATTER&amp;contentId=05T2M00001nqyhs", "/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682M00000RI4sr&amp;operationContext=CHATTER&amp;contentId=05T2M00001nqyhY"),"https://r1rcm--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682M00000RI5RH&amp;operationContext=CHATTER&amp;contentId=05T2M00001nr0L5"),
"https://r1rcm--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682M00000RI5RH&amp;operationContext=CHATTER&amp;contentId=05T2M00001nr0L5")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eng Movement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eng_Score_with_Graphic__c</fullName>
        <formula>TEXT(Engagement_Score__c ) + " " + Eng_Movement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eng Score with Graphic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Score__c</fullName>
        <label>Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zzzEvent Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zzzEvent Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functional_Role__c</fullName>
        <label>Functional Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case Manager</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CMIO</fullName>
                </value>
                <value>
                    <fullName>CMO</fullName>
                </value>
                <value>
                    <fullName>CNO</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Director of Case Management</fullName>
                </value>
                <value>
                    <fullName>Fire / EMS Chief</fullName>
                </value>
                <value>
                    <fullName>PNL Owner</fullName>
                </value>
                <value>
                    <fullName>Practice Administrator</fullName>
                </value>
                <value>
                    <fullName>VP Finance</fullName>
                </value>
                <value>
                    <fullName>VP of Case Management</fullName>
                </value>
                <value>
                    <fullName>VP Rev Cycle</fullName>
                </value>
                <value>
                    <fullName>Compliance Officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funnel_Stage__c</fullName>
        <label>Funnel Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Cross Sell Target</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <formula>if(Not(isnull(R_Graduation_Date__c)),text(YEAR(R_Graduation_Date__c)),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical_Owner__c</fullName>
        <label>Historical Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hospital_Type__c</fullName>
        <label>Hospital Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ambulatory Surgery Center</fullName>
                </value>
                <value>
                    <fullName>Long-Term Acute Care (LTAC)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rehabilitation Hospital</fullName>
                </value>
                <value>
                    <fullName>Short Term Acute Care Hospital</fullName>
                </value>
                <value>
                    <fullName>VA or Department of Defense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hubspot_ID__c</fullName>
        <label>Hubspot ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_3166_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A valid Mailing Country forces population of this linkage field for access to all Country related data fields</description>
        <label>ISO 3166 Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interest_Level__c</fullName>
        <label>Interest Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Indicated</fullName>
                    <default>true</default>
                    <label>Not Indicated</label>
                </value>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Connection_1__c</fullName>
        <label>Internal Connection 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Contact_1__c</fullName>
        <label>Internal Contact 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Contact_2__c</fullName>
        <label>Internal Contact 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsKeyContact__c</fullName>
        <formula>if(isblank(Key_Contact__c),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsTargetContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_in_Sprint__c</fullName>
        <formula>if(Account.Sprintcount__c&gt;0, true, if(Account.Parent.Sprintcount__c&gt;0,true,false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct in Sprint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Board of Directors / Trustees</fullName>
                </value>
                <value>
                    <fullName>Chief Exec / President / Administrator</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Counselor / Therapist</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Head of</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Medical Practitioner</fullName>
                </value>
                <value>
                    <fullName>Nurse / Nursing Executive</fullName>
                </value>
                <value>
                    <fullName>Owner / Partner</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Practice Administrator</fullName>
                </value>
                <value>
                    <fullName>Secretary / Treasurer</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Supervisor / Team Leader</fullName>
                </value>
                <value>
                    <fullName>VP / Managing Director</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <label>Target Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Key_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>From lead. open text. not really used by anyone but good for historical purposes. 1/5/19 MAlterio</description>
        <label>Lead Source Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Prospect Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Active Lead - In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <label>MQL_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Major</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_qualified_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing qualified lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mycontact__c</fullName>
        <formula>IF($User.Id = Owner.Id, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mycontact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Patient_Revenue__c</fullName>
        <label>Net Patient Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than $100 million</fullName>
                </value>
                <value>
                    <fullName>$100 million to $200 million</fullName>
                </value>
                <value>
                    <fullName>$201 million to $300 million</fullName>
                </value>
                <value>
                    <fullName>$301 million to $500 million</fullName>
                </value>
                <value>
                    <fullName>$501 million to $999 million</fullName>
                </value>
                <value>
                    <fullName>$1 billion to $3 billion</fullName>
                </value>
                <value>
                    <fullName>Greater than $3 billion</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Longer_with_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this if the contact is no longer with this company.  Set up new contact on the new company, DO NOT change existing contact to 'move' it to the new company as this will alter the activities.</inlineHelpText>
        <label>No Longer with Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Sales_Calls_Requested__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Sales Calls Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Employed_Physicians__c</fullName>
        <label>No. of Employed Physicians</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 50</fullName>
                </value>
                <value>
                    <fullName>51 - 100</fullName>
                </value>
                <value>
                    <fullName>101 - 150</fullName>
                </value>
                <value>
                    <fullName>More than 150</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Providers__c</fullName>
        <label>No. of Providers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 5</fullName>
                </value>
                <value>
                    <fullName>5 - 10</fullName>
                </value>
                <value>
                    <fullName>11 - 15</fullName>
                </value>
                <value>
                    <fullName>16 - 25</fullName>
                </value>
                <value>
                    <fullName>26 - 50</fullName>
                </value>
                <value>
                    <fullName>51 - 100</fullName>
                </value>
                <value>
                    <fullName>101 - 500</fullName>
                </value>
                <value>
                    <fullName>More than 500</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>1-2</fullName>
                    <isActive>false</isActive>
                    <label>1-2</label>
                </value>
                <value>
                    <fullName>10+</fullName>
                    <isActive>false</isActive>
                    <label>10+</label>
                </value>
                <value>
                    <fullName>100+</fullName>
                    <isActive>false</isActive>
                    <label>100+</label>
                </value>
                <value>
                    <fullName>15+</fullName>
                    <isActive>false</isActive>
                    <label>15+</label>
                </value>
                <value>
                    <fullName>25+</fullName>
                    <isActive>false</isActive>
                    <label>25+</label>
                </value>
                <value>
                    <fullName>3-4</fullName>
                    <isActive>false</isActive>
                    <label>3-4</label>
                </value>
                <value>
                    <fullName>5-6</fullName>
                    <isActive>false</isActive>
                    <label>5-6</label>
                </value>
                <value>
                    <fullName>50+</fullName>
                    <isActive>false</isActive>
                    <label>50+</label>
                </value>
                <value>
                    <fullName>500+</fullName>
                    <isActive>false</isActive>
                    <label>500+</label>
                </value>
                <value>
                    <fullName>7-8</fullName>
                    <isActive>false</isActive>
                    <label>7-8</label>
                </value>
                <value>
                    <fullName>9-10</fullName>
                    <isActive>false</isActive>
                    <label>9-10</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optima_Customer_Code__c</fullName>
        <formula>Account.Optima_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Optima Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACO (Accountable Care Organization)</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Business / Corporation</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Fire / EMS Agency</fullName>
                </value>
                <value>
                    <fullName>Government Agency</fullName>
                </value>
                <value>
                    <fullName>Health Plan</fullName>
                </value>
                <value>
                    <fullName>Hospice / Assisted Living</fullName>
                </value>
                <value>
                    <fullName>Hospital / Health System</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Management Services Organization (MSO)</fullName>
                </value>
                <value>
                    <fullName>Medical Practice</fullName>
                </value>
                <value>
                    <fullName>Medical Provider</fullName>
                </value>
                <value>
                    <fullName>Non-Profit / Association</fullName>
                </value>
                <value>
                    <fullName>Physician Group</fullName>
                </value>
                <value>
                    <fullName>Press / Analyst</fullName>
                </value>
                <value>
                    <fullName>R1 Business Partner / Vendor</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>TeleHealth Provider</fullName>
                </value>
                <value>
                    <fullName>TPA (Third Party Administrator)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <description>created 10.29.2018 to map with Lead's custom "Other Phone" only because the Lead's custom field--even with phone field format--would not map to native Contact "other phone"</description>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Outcome_Status__c</fullName>
        <label>Outcome Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Contact</fullName>
                </value>
                <value>
                    <fullName>First Contact Attempt</fullName>
                </value>
                <value>
                    <fullName>Second Contact Attempt</fullName>
                </value>
                <value>
                    <fullName>Third Contact Attempt</fullName>
                </value>
                <value>
                    <fullName>Fourth Contact Attempt</fullName>
                </value>
                <value>
                    <fullName>Meeting Scheduling in Progress</fullName>
                </value>
                <value>
                    <fullName>Return to Marketing Campaign</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Budget</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Need</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Timing</fullName>
                </value>
                <value>
                    <fullName>Incorrect Assignment</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Non-Provider</fullName>
                </value>
                <value>
                    <fullName>Sales Appointment Confirmed</fullName>
                </value>
                <value>
                    <fullName>Call Requested by Contact</fullName>
                </value>
                <value>
                    <fullName>Sales Nurturing</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Size</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physician_Group_Ownership__c</fullName>
        <label>Physician Group Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Management Group</fullName>
                </value>
                <value>
                    <fullName>Hospital Employed (For-Profit Institution)</fullName>
                </value>
                <value>
                    <fullName>Hospital Employed (Government Institution)</fullName>
                </value>
                <value>
                    <fullName>Hospital Employed (Not-for-Profit Institution)</fullName>
                </value>
                <value>
                    <fullName>Provider Owned (Single)</fullName>
                </value>
                <value>
                    <fullName>Provider Owned (Group)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_of_One_Contacts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>